{
  "version": 4,
  "terraform_version": "1.2.2",
  "serial": 54,
  "lineage": "66b6d49c-759f-58ad-ac8d-3b6bca8fecf3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "polkadot-node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08d70e59c07c61a3a",
            "arn": "arn:aws:ec2:us-west-2:317061817411:instance/i-06a1a13a5a6a30bd5",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_optimized": true,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06a1a13a5a6a30bd5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m4.large",
            "ipv6_address_count": 0,
            "key_name": "test-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a1f847a075f27e4a",
            "private_dns": "ip-172-26-55-47.us-west-2.compute.internal",
            "private_ip": "172.26.55.47",
            "public_dns": "ec2-54-212-4-42.us-west-2.compute.amazonaws.com",
            "public_ip": "54.212.4.42",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 150,
                "kms_key_id": "arn:aws:kms:us-west-2:317061817411:key/4b8dbc55-b793-4461-a1ca-b24b144160ef",
                "throughput": 0,
                "volume_id": "vol-0f9c8cd72a04b173b",
                "volume_size": 50,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-030563d5e139d117c",
            "tags": {
              "Name": "polkadot-full-node-0"
            },
            "tags_all": {
              "Name": "polkadot-full-node-0"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04f89cafa1ab081a1"
            ]
          },
          "dependencies": [
            "aws_security_group.polkadot-sg",
            "aws_subnet.polkadot-node-subnet",
            "aws_vpc.polkadot-vpc",
            "data.aws_key_pair.aws-key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "polkadot-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:317061817411:internet-gateway/igw-014e75bf324425330",
            "id": "igw-014e75bf324425330",
            "owner_id": "317061817411",
            "tags": {
              "name": "polkadot-gw"
            },
            "tags_all": {
              "name": "polkadot-gw"
            },
            "vpc_id": "vpc-01b81c66f8926e820"
          },
          "dependencies": [
            "aws_vpc.polkadot-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "polkadot-route-tbl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:317061817411:route-table/rtb-08af11337c59a996e",
            "id": "rtb-08af11337c59a996e",
            "owner_id": "317061817411",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-014e75bf324425330",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "name": "polkadot-route-tb"
            },
            "tags_all": {
              "name": "polkadot-route-tb"
            },
            "timeouts": null,
            "vpc_id": "vpc-01b81c66f8926e820"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.polkadot-gw",
            "aws_vpc.polkadot-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "polkadot-route-tbl-associaion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d7eae1b50e5156bb",
            "route_table_id": "rtb-08af11337c59a996e",
            "subnet_id": "subnet-030563d5e139d117c"
          },
          "dependencies": [
            "aws_internet_gateway.polkadot-gw",
            "aws_route_table.polkadot-route-tbl",
            "aws_subnet.polkadot-node-subnet",
            "aws_vpc.polkadot-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "polkadot-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:317061817411:security-group/sg-04f89cafa1ab081a1",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-04f89cafa1ab081a1",
            "ingress": [],
            "name": "externalssh",
            "name_prefix": "",
            "owner_id": "317061817411",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-01b81c66f8926e820"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.polkadot-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_all-polkadot-sg-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-1094271175",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-04f89cafa1ab081a1",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.polkadot-sg",
            "aws_vpc.polkadot-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "externalssh-polkadot-sg-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-1070007621",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-04f89cafa1ab081a1",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.polkadot-sg",
            "aws_vpc.polkadot-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node-exporter-polkadot-sg-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 9100,
            "id": "sgrule-2190922476",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-04f89cafa1ab081a1",
            "self": false,
            "source_security_group_id": null,
            "to_port": 9100,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.polkadot-sg",
            "aws_vpc.polkadot-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node-metrics-polkadot-sg-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 9616,
            "id": "sgrule-3394617906",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-04f89cafa1ab081a1",
            "self": false,
            "source_security_group_id": null,
            "to_port": 9616,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.polkadot-sg",
            "aws_vpc.polkadot-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "p2p-polkadot-sg-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 30333,
            "id": "sgrule-3212805466",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-04f89cafa1ab081a1",
            "self": false,
            "source_security_group_id": null,
            "to_port": 30333,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.polkadot-sg",
            "aws_vpc.polkadot-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "p2p-proxy-polkadot-sg-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-2303547632",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-04f89cafa1ab081a1",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.polkadot-sg",
            "aws_vpc.polkadot-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "vpn-polkadot-sg-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 51820,
            "id": "sgrule-2111376586",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-04f89cafa1ab081a1",
            "self": false,
            "source_security_group_id": null,
            "to_port": 51820,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.polkadot-sg",
            "aws_vpc.polkadot-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "polkadot-node-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:317061817411:subnet/subnet-030563d5e139d117c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "172.26.32.0/19",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-030563d5e139d117c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "317061817411",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-01b81c66f8926e820"
          },
          "dependencies": [
            "aws_vpc.polkadot-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "polkadot-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:317061817411:vpc/vpc-01b81c66f8926e820",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.26.0.0/16",
            "default_network_acl_id": "acl-0e8077f9bc50cc794",
            "default_route_table_id": "rtb-08d85069b4a6f4160",
            "default_security_group_id": "sg-0a8b7feccd191fd94",
            "dhcp_options_id": "dopt-09f3288b88ea58fe6",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-01b81c66f8926e820",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08d85069b4a6f4160",
            "owner_id": "317061817411",
            "tags": {
              "name": "polkadot-vpc"
            },
            "tags_all": {
              "name": "polkadot-vpc"
            }
          }
        }
      ]
    }
  ]
}